crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__iceberg[catalog]-federated_tpch_simple_q5_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: tpch_simple_q5"
---
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                            |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: total_price DESC NULLS FIRST                                                                                                              |
|               |   Projection: sum(o.o_totalprice) AS total_price, l.l_linestatus                                                                                |
|               |     Aggregate: groupBy=[[l.l_linestatus]], aggr=[[sum(o.o_totalprice)]]                                                                         |
|               |       Projection: o.o_totalprice, l.l_linestatus                                                                                                |
|               |         Inner Join: o.o_orderkey = l.l_orderkey                                                                                                 |
|               |           SubqueryAlias: o                                                                                                                      |
|               |             BytesProcessedNode                                                                                                                  |
|               |               TableScan: ice.tpch_sf1.orders projection=[o_orderkey, o_totalprice]                                                              |
|               |           SubqueryAlias: l                                                                                                                      |
|               |             BytesProcessedNode                                                                                                                  |
|               |               TableScan: ice.tpch_sf1.lineitem projection=[l_orderkey, l_linestatus]                                                            |
| physical_plan | SortPreservingMergeExec: [total_price@0 DESC]                                                                                                   |
|               |   SortExec: expr=[total_price@0 DESC], preserve_partitioning=[true]                                                                             |
|               |     ProjectionExec: expr=[sum(o.o_totalprice)@1 as total_price, l_linestatus@0 as l_linestatus]                                                 |
|               |       AggregateExec: mode=FinalPartitioned, gby=[l_linestatus@0 as l_linestatus], aggr=[sum(o.o_totalprice)]                                    |
|               |         CoalesceBatchesExec: target_batch_size=8192                                                                                             |
|               |           RepartitionExec: partitioning=Hash([l_linestatus@0], 24), input_partitions=24                                                         |
|               |             AggregateExec: mode=Partial, gby=[l_linestatus@1 as l_linestatus], aggr=[sum(o.o_totalprice)]                                       |
|               |               CoalesceBatchesExec: target_batch_size=8192                                                                                       |
|               |                 HashJoinExec: mode=Partitioned, join_type=Inner, on=[(o_orderkey@0, l_orderkey@0)], projection=[o_totalprice@1, l_linestatus@3] |
|               |                   CoalesceBatchesExec: target_batch_size=8192                                                                                   |
|               |                     RepartitionExec: partitioning=Hash([o_orderkey@0], 24), input_partitions=24                                                 |
|               |                       RepartitionExec: partitioning=RoundRobinBatch(24), input_partitions=1                                                     |
|               |                         BytesProcessedExec                                                                                                      |
|               |                           IcebergTableScan projection:[o_orderkey,o_totalprice] predicate:[]                                                    |
|               |                   CoalesceBatchesExec: target_batch_size=8192                                                                                   |
|               |                     RepartitionExec: partitioning=Hash([l_orderkey@0], 24), input_partitions=24                                                 |
|               |                       RepartitionExec: partitioning=RoundRobinBatch(24), input_partitions=1                                                     |
|               |                         BytesProcessedExec                                                                                                      |
|               |                           IcebergTableScan projection:[l_orderkey,l_linestatus] predicate:[]                                                    |
|               |                                                                                                                                                 |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------+
