crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__iceberg[catalog]-federated_tpch_simple_q6_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: tpch_simple_q6"
---
+---------------+--------------------------------------------------------------------------+
| plan_type     | plan                                                                     |
+---------------+--------------------------------------------------------------------------+
| logical_plan  | SubqueryAlias: c                                                         |
|               |   Projection: ice.tpch_sf1.orders.o_orderkey + Int64(1) AS key           |
|               |     Limit: skip=0, fetch=10                                              |
|               |       BytesProcessedNode                                                 |
|               |         TableScan: ice.tpch_sf1.orders projection=[o_orderkey], fetch=10 |
| physical_plan | ProjectionExec: expr=[o_orderkey@0 + 1 as key]                           |
|               |   RepartitionExec: partitioning=RoundRobinBatch(16), input_partitions=1  |
|               |     GlobalLimitExec: skip=0, fetch=10                                    |
|               |       BytesProcessedExec                                                 |
|               |         CooperativeExec                                                  |
|               |           IcebergTableScan projection:[o_orderkey] predicate:[]          |
|               |                                                                          |
+---------------+--------------------------------------------------------------------------+
