crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__iceberg[catalog]-federated_tpch_simple_q7_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: tpch_simple_q7"
---
+---------------+--------------------------------------------------------------------------+
| plan_type     | plan                                                                     |
+---------------+--------------------------------------------------------------------------+
| logical_plan  | SubqueryAlias: c                                                         |
|               |   Projection: ice.tpch_sf1.orders.o_orderkey AS key                      |
|               |     Limit: skip=0, fetch=10                                              |
|               |       BytesProcessedNode                                                 |
|               |         TableScan: ice.tpch_sf1.orders projection=[o_orderkey], fetch=10 |
| physical_plan | ProjectionExec: expr=[o_orderkey@0 as key]                               |
|               |   BytesProcessedExec                                                     |
|               |     GlobalLimitExec: skip=0, fetch=10                                    |
|               |       CooperativeExec                                                    |
|               |         IcebergTableScan projection:[o_orderkey] predicate:[] limit:[10] |
|               |                                                                          |
+---------------+--------------------------------------------------------------------------+
