crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__iceberg[hadoop[catalog]]-federated_tpch_q12_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: tpch_q12"
---
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: hadoop.tpch.lineitem.l_shipmode ASC NULLS LAST                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
|               |   Projection: hadoop.tpch.lineitem.l_shipmode, sum(CASE WHEN hadoop.tpch.orders.o_orderpriority = Utf8("1-URGENT") OR hadoop.tpch.orders.o_orderpriority = Utf8("2-HIGH") THEN Int64(1) ELSE Int64(0) END) AS high_line_count, sum(CASE WHEN hadoop.tpch.orders.o_orderpriority != Utf8("1-URGENT") AND hadoop.tpch.orders.o_orderpriority != Utf8("2-HIGH") THEN Int64(1) ELSE Int64(0) END) AS low_line_count                                                                                                      |
|               |     Aggregate: groupBy=[[hadoop.tpch.lineitem.l_shipmode]], aggr=[[sum(CASE WHEN hadoop.tpch.orders.o_orderpriority = Utf8("1-URGENT") OR hadoop.tpch.orders.o_orderpriority = Utf8("2-HIGH") THEN Int64(1) ELSE Int64(0) END), sum(CASE WHEN hadoop.tpch.orders.o_orderpriority != Utf8("1-URGENT") AND hadoop.tpch.orders.o_orderpriority != Utf8("2-HIGH") THEN Int64(1) ELSE Int64(0) END)]]                                                                                                                     |
|               |       Projection: hadoop.tpch.lineitem.l_shipmode, hadoop.tpch.orders.o_orderpriority                                                                                                                                                                                                                                                                                                                                                                                                                                |
|               |         Inner Join: hadoop.tpch.lineitem.l_orderkey = hadoop.tpch.orders.o_orderkey                                                                                                                                                                                                                                                                                                                                                                                                                                  |
|               |           Projection: hadoop.tpch.lineitem.l_orderkey, hadoop.tpch.lineitem.l_shipmode                                                                                                                                                                                                                                                                                                                                                                                                                               |
|               |             BytesProcessedNode                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
|               |               Filter: (hadoop.tpch.lineitem.l_shipmode = Utf8("MAIL") OR hadoop.tpch.lineitem.l_shipmode = Utf8("SHIP")) AND hadoop.tpch.lineitem.l_receiptdate > hadoop.tpch.lineitem.l_commitdate AND hadoop.tpch.lineitem.l_shipdate < hadoop.tpch.lineitem.l_commitdate AND hadoop.tpch.lineitem.l_receiptdate >= Date32("1994-01-01") AND hadoop.tpch.lineitem.l_receiptdate < Date32("1995-01-01")                                                                                                             |
|               |                 TableScan: hadoop.tpch.lineitem projection=[l_orderkey, l_shipdate, l_commitdate, l_receiptdate, l_shipmode], partial_filters=[hadoop.tpch.lineitem.l_shipmode = Utf8("MAIL") OR hadoop.tpch.lineitem.l_shipmode = Utf8("SHIP"), hadoop.tpch.lineitem.l_receiptdate > hadoop.tpch.lineitem.l_commitdate, hadoop.tpch.lineitem.l_shipdate < hadoop.tpch.lineitem.l_commitdate, hadoop.tpch.lineitem.l_receiptdate >= Date32("1994-01-01"), hadoop.tpch.lineitem.l_receiptdate < Date32("1995-01-01")] |
|               |           BytesProcessedNode                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
|               |             TableScan: hadoop.tpch.orders projection=[o_orderkey, o_orderpriority]                                                                                                                                                                                                                                                                                                                                                                                                                                   |
| physical_plan | SortPreservingMergeExec: [l_shipmode@0 ASC NULLS LAST]                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
|               |   SortExec: expr=[l_shipmode@0 ASC NULLS LAST], preserve_partitioning=[true]                                                                                                                                                                                                                                                                                                                                                                                                                                         |
|               |     ProjectionExec: expr=[l_shipmode@0 as l_shipmode, sum(CASE WHEN hadoop.tpch.orders.o_orderpriority = Utf8("1-URGENT") OR hadoop.tpch.orders.o_orderpriority = Utf8("2-HIGH") THEN Int64(1) ELSE Int64(0) END)@1 as high_line_count, sum(CASE WHEN hadoop.tpch.orders.o_orderpriority != Utf8("1-URGENT") AND hadoop.tpch.orders.o_orderpriority != Utf8("2-HIGH") THEN Int64(1) ELSE Int64(0) END)@2 as low_line_count]                                                                                          |
|               |       AggregateExec: mode=FinalPartitioned, gby=[l_shipmode@0 as l_shipmode], aggr=[sum(CASE WHEN hadoop.tpch.orders.o_orderpriority = Utf8("1-URGENT") OR hadoop.tpch.orders.o_orderpriority = Utf8("2-HIGH") THEN Int64(1) ELSE Int64(0) END), sum(CASE WHEN hadoop.tpch.orders.o_orderpriority != Utf8("1-URGENT") AND hadoop.tpch.orders.o_orderpriority != Utf8("2-HIGH") THEN Int64(1) ELSE Int64(0) END)]                                                                                                     |
|               |         CoalesceBatchesExec: target_batch_size=8192                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
|               |           RepartitionExec: partitioning=Hash([l_shipmode@0], 16), input_partitions=16                                                                                                                                                                                                                                                                                                                                                                                                                                |
|               |             AggregateExec: mode=Partial, gby=[l_shipmode@0 as l_shipmode], aggr=[sum(CASE WHEN hadoop.tpch.orders.o_orderpriority = Utf8("1-URGENT") OR hadoop.tpch.orders.o_orderpriority = Utf8("2-HIGH") THEN Int64(1) ELSE Int64(0) END), sum(CASE WHEN hadoop.tpch.orders.o_orderpriority != Utf8("1-URGENT") AND hadoop.tpch.orders.o_orderpriority != Utf8("2-HIGH") THEN Int64(1) ELSE Int64(0) END)]                                                                                                        |
|               |               CoalesceBatchesExec: target_batch_size=8192                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
|               |                 HashJoinExec: mode=Partitioned, join_type=Inner, on=[(l_orderkey@0, o_orderkey@0)], projection=[l_shipmode@1, o_orderpriority@3]                                                                                                                                                                                                                                                                                                                                                                     |
|               |                   CoalesceBatchesExec: target_batch_size=8192                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
|               |                     RepartitionExec: partitioning=Hash([l_orderkey@0], 16), input_partitions=16                                                                                                                                                                                                                                                                                                                                                                                                                      |
|               |                       ProjectionExec: expr=[l_orderkey@0 as l_orderkey, l_shipmode@4 as l_shipmode]                                                                                                                                                                                                                                                                                                                                                                                                                  |
|               |                         BytesProcessedExec                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
|               |                           CoalesceBatchesExec: target_batch_size=8192                                                                                                                                                                                                                                                                                                                                                                                                                                                |
|               |                             FilterExec: (l_shipmode@4 = MAIL OR l_shipmode@4 = SHIP) AND l_receiptdate@3 > l_commitdate@2 AND l_shipdate@1 < l_commitdate@2 AND l_receiptdate@3 >= 1994-01-01 AND l_receiptdate@3 < 1995-01-01                                                                                                                                                                                                                                                                                       |
|               |                               RepartitionExec: partitioning=RoundRobinBatch(16), input_partitions=1                                                                                                                                                                                                                                                                                                                                                                                                                  |
|               |                                 IcebergTableScan projection:[l_orderkey,l_shipdate,l_commitdate,l_receiptdate,l_shipmode] predicate:[(((l_shipmode = "MAIL") OR (l_shipmode = "SHIP")) AND (l_receiptdate >= 1994-01-01)) AND (l_receiptdate < 1995-01-01)]                                                                                                                                                                                                                                                          |
|               |                   CoalesceBatchesExec: target_batch_size=8192                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
|               |                     RepartitionExec: partitioning=Hash([o_orderkey@0], 16), input_partitions=16                                                                                                                                                                                                                                                                                                                                                                                                                      |
|               |                       BytesProcessedExec                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
|               |                         RepartitionExec: partitioning=RoundRobinBatch(16), input_partitions=1                                                                                                                                                                                                                                                                                                                                                                                                                        |
|               |                           IcebergTableScan projection:[o_orderkey,o_orderpriority] predicate:[]                                                                                                                                                                                                                                                                                                                                                                                                                      |
|               |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
